# rust-wrap-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  VERSION  codecov.yaml  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/: CODEOWNERS  PUBLISHERS
aes/: struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192Dec.html  struct.Aes192Enc.html
ahash/: struct.AHashMap.html  struct.AHashSet.html
aho_corasick/: struct.PatternID.html  struct.Span.html
anstream/: trait.IsTerminal.html  trait.RawStream.html
anstyle/: enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.RgbColor.html  struct.Style.html
array_init/: all.html  fn.array_init.html  fn.array_init_copy.html  fn.from_iter.html  fn.from_iter_copy.html  index.html  trait.IsArray.html
arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
ascii/: all.html  enum.AsciiChar.html  fn.caret_decode.html  fn.caret_encode.html  index.html  struct.AsAsciiStrError.html  struct.AsciiStr.html  struct.AsciiString.html  struct.FromAsciiError.html  struct.Lines.html  struct.ToAsciiCharError.html  trait.AsAsciiStr.html  trait.AsMutAsciiStr.html  trait.IntoAsciiString.html  trait.ToAsciiChar.html  type.Chars.html  type.CharsMut.html
askama/: all.html  derive.Template.html  enum.Error.html  fn.rerun_if_templates_changed.html  index.html  struct.Html.html  struct.MarkupDisplay.html  struct.Text.html  trait.DynTemplate.html  trait.Template.html  type.Result.html
askama_derive/: all.html  derive.Template.html  index.html
askama_escape/: struct.MarkupDisplay.html
auto_impl/: all.html  attr.auto_impl.html  index.html
backtrace/: enum.BytesOrWideString.html  struct.SymbolName.html
base16ct/: all.html  enum.Error.html  fn.decoded_len.html  fn.encoded_len.html  index.html  struct.HexDisplay.html  type.Result.html
basic_toml/: all.html  fn.from_slice.html  fn.from_str.html  fn.to_string.html  index.html  struct.Error.html
bech32/: all.html  enum.Error.html  enum.Variant.html  fn.convert_bits.html  fn.decode.html  fn.decode_without_checksum.html  fn.encode.html  fn.encode_to_fmt.html  fn.encode_without_checksum.html  fn.encode_without_checksum_to_fmt.html  index.html  struct.Bech32Writer.html  struct.u5.html  trait.Base32Len.html  trait.CheckBase32.html  trait.FromBase32.html  trait.ToBase32.html  trait.WriteBase32.html
bigdecimal/: all.html  enum.ParseBigDecimalError.html  index.html  struct.BigDecimal.html  trait.FromPrimitive.html  trait.Num.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Zero.html
bit_set/: all.html  index.html  struct.BitSet.html  struct.Difference.html  struct.Intersection.html  struct.Iter.html  struct.SymmetricDifference.html  struct.Union.html
bit_vec/: all.html  index.html  struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html  trait.BitBlock.html
bitvec/: all.html  index.html  macro.BitArr.html  macro.bitarr.html  macro.bitbox.html  macro.bits.html  macro.bitvec.html
block_buffer/: struct.BlockBuffer.html  struct.Eager.html  struct.Error.html  struct.Lazy.html
bs58/: all.html  fn.decode.html  fn.encode.html  index.html  struct.Alphabet.html
buf_redux/: all.html  fn.copy_buf.html  fn.set_drop_err_handler.html  index.html  macro.do_read.html  macro.flush_amt.html  struct.BufReader.html  struct.BufWriter.html  struct.Buffer.html  struct.IntoInnerError.html  struct.LineWriter.html  struct.Unbuffer.html
bumpalo/: all.html  enum.AllocOrInitError.html  index.html  struct.AllocErr.html  struct.Bump.html  struct.ChunkIter.html  struct.ChunkRawIter.html
byte_slice_cast/: all.html  enum.Error.html  index.html  trait.AsByteSlice.html  trait.AsMutByteSlice.html  trait.AsMutSliceOf.html  trait.AsSliceOf.html  trait.FromByteSlice.html  trait.ToByteSlice.html  trait.ToMutByteSlice.html
bytecheck/: all.html  derive.CheckBytes.html  enum.CStrCheckError.html  enum.EnumCheckError.html  enum.NonZeroCheckError.html  enum.SliceCheckError.html  enum.StrCheckError.html  enum.Tuple10CheckError.html  enum.Tuple11CheckError.html  enum.Tuple12CheckError.html  enum.Tuple1CheckError.html  enum.Tuple2CheckError.html  enum.Tuple3CheckError.html  enum.Tuple4CheckError.html  enum.Tuple5CheckError.html  enum.Tuple6CheckError.html  enum.Tuple7CheckError.html  enum.Tuple8CheckError.html  enum.Tuple9CheckError.html  index.html  struct.ArrayCheckError.html  struct.BoolCheckError.html  struct.CharCheckError.html  struct.StructCheckError.html  struct.TupleStructCheckError.html  trait.CheckBytes.html  trait.Error.html  type.ErrorBox.html
bytecheck_derive/: all.html  derive.CheckBytes.html  index.html
bytecount/: fn.count.html  fn.naive_count.html  fn.naive_count_32.html  fn.naive_num_chars.html  fn.num_chars.html
bytes/: struct.Bytes.html  struct.BytesMut.html
camino/: enum.Utf8Component.html  struct.FromPathBufError.html  struct.FromPathError.html  struct.Iter.html  struct.Utf8Components.html  struct.Utf8Path.html  struct.Utf8PathBuf.html
cargo_metadata/: all.html  enum.ArtifactDebuginfo.html  enum.CargoOpt.html  enum.DependencyKind.html  enum.Edition.html  enum.Error.html  enum.Message.html  fn.parse_messages.html  index.html  struct.Artifact.html  struct.ArtifactProfile.html  struct.BuildFinished.html  struct.BuildScript.html  struct.CompilerMessage.html  struct.DepKindInfo.html  struct.Dependency.html  struct.MessageIter.html  struct.Metadata.html  struct.MetadataCommand.html  struct.Node.html  struct.NodeDep.html  struct.Package.html  struct.PackageId.html  struct.Resolve.html  struct.Source.html  struct.Target.html  type.Result.html
cargo_platform/: all.html  enum.Cfg.html  enum.CfgExpr.html  enum.ParseErrorKind.html  enum.Platform.html  index.html  struct.ParseError.html
clap/: all.html  (+10 more)
examples/: Cargo.toml  README.md  ens.rs  ethereum.rs  ethers.rs  hello_world.rs
examples/src/: ens.rs  ethers.rs  filesystem.rs  hello_world.rs  http.rs  ipfs.rs  logger.rs
(+55202 files in other folders)
