[workspace.package]
version = "0.1.6-beta.7"
license = "MIT"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/polywrap/rust-client"

[workspace]
members = [
    "packages/client",
    "packages/core",
    "packages/uri",
    "packages/wasm",
    "packages/resolvers",
    "packages/msgpack",
    "packages/manifest",
    "packages/builder",
    "packages/plugin",
    "packages/native",
    "packages/resolver-extensions",
    "packages/default-config"
]

# Do not include test utils & default config crates in default members
default-members = [
    "packages/client",
    "packages/core",
    "packages/uri",
    "packages/wasm",
    "packages/resolvers",
    "packages/msgpack",
    "packages/manifest",
    "packages/builder",
    "packages/plugin",
    "packages/native",
    "packages/resolver-extensions"
]

[workspace.dependencies]
polywrap_client = { version = "0.1.6-beta.7", path = "packages/client" } 
polywrap_wasm = { version = "0.1.6-beta.7", path = "packages/wasm" }
polywrap_client_builder = { version = "0.1.6-beta.7", path = "packages/builder" }
polywrap_uri = { version = "0.1.6-beta.7", path = "packages/uri" }
polywrap_core = { version = "0.1.6-beta.7", path = "packages/core" }
wrap_manifest_schemas = { version = "0.1.6-beta.7", path = "packages/manifest" }
polywrap_resolvers = { version = "0.1.6-beta.7", path = "packages/resolvers" }
polywrap_resolver_extensions = { version = "0.1.6-beta.7", path = "packages/resolver-extensions" }
polywrap_msgpack = { version = "0.1.6-beta.7", path = "packages/msgpack" }
polywrap_tests_utils = { version = "0.1.6-beta.7", path = "packages/tests-utils" }
polywrap_plugin = { version = "0.1.6-beta.7", path = "packages/plugin" }
polywrap_client_default_config = { version = "0.1.6-beta.7", path = "packages/default-config" }
polywrap_core_macros = { version = "0.1.6-beta.7", path = "packages/core/macros" }

polywrap_plugin_implementor = { version = "0.1.6-beta.7", path = "packages/plugin/implementor" }

polywrap_fs_plugin = { git = "https://github.com/polywrap/file-system/", branch = "update-with-latest-msgpack" }
polywrap_http_plugin = { path = "../http/implementations/rs" }


serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.40"
jsonschema = "0.16.1"
regex = "1.6.0"
rmp-serde = "1.1.1"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.105", features=["full", "extra-traits", "visit"] }
base64 = "0.13.1"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
serde_bytes = "0.11.5"

[patch.crates-io]
polywrap_uri = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_core = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }

