[workspace.package]
version = "0.1.6-beta.13"
license = "MIT"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/polywrap/rust-client"
exclude = [
    "examples"
]

[workspace]
members = [
    "packages/polywrap",
    "packages/client",
    "packages/core",
    "packages/uri",
    "packages/wasm",
    "packages/resolvers",
    "packages/manifest",
    "packages/builder",
    "packages/plugin",
    "packages/native",
    "packages/resolver-extensions",
    "packages/default-config",
    "packages/plugins/http",
    "packages/plugins/fs",
    "packages/plugins/ethereum-wallet",

    "examples/"
]

# Do not include test utils in default members
default-members = [
    "packages/polywrap",
    "packages/client",
    "packages/core",
    "packages/uri",
    "packages/wasm",
    "packages/resolvers",
    "packages/manifest",
    "packages/builder",
    "packages/plugin",
    "packages/native",
    "packages/resolver-extensions",
    "packages/default-config",
    "packages/plugins/http",
    "packages/plugins/fs",
    "packages/plugins/ethereum-wallet"
]

[workspace.dependencies]
polywrap = { version = "0.1.6-beta.13", path = "packages/polywrap" }
polywrap_client = { version = "0.1.6-beta.13", path = "packages/client" }
polywrap_wasm = { version = "0.1.6-beta.13", path = "packages/wasm" }
polywrap_client_builder = { version = "0.1.6-beta.13", path = "packages/builder" }
polywrap_uri = { version = "0.1.6-beta.13", path = "packages/uri" }
polywrap_core = { version = "0.1.6-beta.13", path = "packages/core" }
wrap_manifest_schemas = { version = "0.1.6-beta.13", path = "packages/manifest" }
polywrap_resolvers = { version = "0.1.6-beta.13", path = "packages/resolvers" }
polywrap_resolver_extensions = { version = "0.1.6-beta.13", path = "packages/resolver-extensions" }
polywrap_tests_utils = { version = "0.1.6-beta.13", path = "packages/tests-utils" }
polywrap_plugin = { version = "0.1.6-beta.13", path = "packages/plugin" }
polywrap_client_default_config = { version = "0.1.6-beta.13", path = "packages/default-config" }
polywrap_core_macros = { version = "0.1.6-beta.13", path = "packages/core/macros" }

polywrap_plugin_implementor = { version = "0.1.6-beta.13", path = "packages/plugin/implementor" }

polywrap_fs_plugin = { version = "0.1.6-beta.13", path = "packages/plugins/fs" }
polywrap_http_plugin = { version = "0.1.6-beta.13", path = "packages/plugins/http" }
polywrap_ethereum_wallet_plugin = { version = "0.1.6-beta.13", path = "packages/plugins/ethereum-wallet" }
polywrap_logger_plugin = { version = "0.1.6-beta.13", path = "packages/plugins/logger" }

polywrap_msgpack_serde = "0.0.2-beta.5"
tokio = { version = "1.28", features = ["full"] }

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.40"
jsonschema = "0.16.1"
regex = "1.6.0"
ureq = "2.5.0"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.105", features=["full", "extra-traits", "visit"] }
base64 = "0.13.1"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
serde_bytes = "0.11.5"
lazy_static = "1.4.0"
