[package]
name = "client-examples"
version = "0.0.0"
publish = false

[dev-dependencies]
polywrap_core = { path = "../packages/core" }
polywrap_client = { path = "../packages/client" }
polywrap_client_builder = { path = "../packages/builder" }
polywrap_client_default_config = { path = "../packages/default-config" }
polywrap_plugin = { path = "../packages/plugin" }

polywrap_logger_plugin = { path = "../packages/plugins/logger" }
polywrap_fs_plugin = { path = "../packages/plugins/fs" }
polywrap_http_plugin = { path = "../packages/plugins/http" }
polywrap_ethereum_wallet_plugin = { path = "../packages/plugins/ethereum-wallet" }

polywrap_msgpack_serde = "0.0.2-beta.5"
serde = { version = "1.0.145", features = ["derive"] }

[[example]]
name = "hello_world"
path = "src/hello_world.rs"

[[example]]
name = "filesystem"
path = "src/filesystem.rs"

[[example]]
name = "http"
path = "src/http.rs"

[[example]]
name = "ipfs"
path = "src/ipfs.rs"

[[example]]
name = "ethers"
path = "src/ethers.rs"

[[example]]
name = "ens"
path = "src/ens.rs"
